Fixes #15521: Add hardening config in relayd systemd unit

--- a/relay/sources/systemd/rudder-relayd.service
+++ b/relay/sources/systemd/rudder-relayd.service
@@ -5,7 +5,7 @@ After=network-online.target
 [Service]
 ExecStart=/opt/rudder/bin/rudder-relayd
 ExecReload=/opt/rudder/bin/rudder relay reload
-User=rudder
+User=rudder-relayd
 Group=rudder
 
 [Install]
