Fixes #15529: Add autocompletion to rudder-pkg

--- a/relay/sources/Makefile
+++ b/relay/sources/Makefile
@@ -54,6 +54,7 @@ target/man-source/%: man/%.adoc
 	asciidoctor -D target/man-source -b manpage $<
 
 autocomplete/rudder-pkg.sh:
+	if type pip3 >/dev/null 2>&1; then pip3 install infi.docopt-completion; else easy_install infi.docopt-completion; fi
 	mkdir -p autocomplete
 	PYTHONPATH=$(CURDIR)/rudder-pkg/lib/rudder-pkg:$$PYTHONPATH; cd autocomplete && docopt-completion $(CURDIR)/rudder-pkg/rudder-pkg --manual-bash && cd -
 
