--- a/relay/sources/apache/rudder-apache-relay-common.conf
+++ b/relay/sources/apache/rudder-apache-relay-common.conf
@@ -75,31 +75,12 @@ Alias /reports /var/rudder/reports/incoming
 </Directory>
 
 # Load relay-api
-WSGIScriptAlias /rudder/relay-api /opt/rudder/share/relay-api/relay-api.wsgi
+ProxyPass /rudder/relay-api/ http://127.0.0.1:3030/rudder/relay-api/
 
 ## Set directory access permissions
 
-<Directory /opt/rudder/share/relay-api/relay_api>
-  # Allow access from anybody
-  Require all granted
-</Directory>
-
-<Files /opt/rudder/share/relay-api/relay-api.wsgi>
-  # Allow access from anybody
-  Require all granted
-</Files>
-
-<Directory /opt/rudder/share/relay-api/flask>
-  # Allow access from anybody
-  Require all granted
-</Directory>
-
 # Disallow by default
 <Location /rudder/relay-api/>
-  # WSGI parameters
-  WSGIProcessGroup relay_api
-  WSGIApplicationGroup %{GLOBAL}
-
   Require all denied
 </Location>
 
