Fixes #15536: Updating Apache's reverse proxy configuration to handle HTTPS requests on remote-run API

--- a/relay/sources/apache/rudder-apache-relay-common.conf
+++ b/relay/sources/apache/rudder-apache-relay-common.conf
@@ -77,6 +77,8 @@ Alias /reports /var/rudder/reports/incoming
 # Load relay-api
 WSGIScriptAlias /rudder/relay-api /opt/rudder/share/relay-api/relay-api.wsgi
 
+ProxyPass /rudder/relay-api/remote-run/ http://127.0.0.1:3030/rudder/relay-api/remote-run/
+
 ## Set directory access permissions
 
 <Directory /opt/rudder/share/relay-api/relay_api>
