Fixes #15546: Parent does not work because subcommand is not interpreted

--- a/relay/sources/Makefile
+++ b/relay/sources/Makefile
@@ -119,7 +119,7 @@ install: build
 	# Install service
 	install -m 644 systemd/rudder-relayd.service $(DESTDIR)/usr/lib/systemd/system/rudder-relayd.service
 	# Sandboxing if compatible
-	[ $(systemctl --version | head -1 | cut -d' ' -f2) -gt 232 ] && sed '/\[Service\]/ r systemd/rudder-relayd-hardening' $(DESTDIR)/usr/lib/systemd/system/rudder-relayd.service
+	[ $$(systemctl --version | head -1 | cut -d' ' -f2) -gt 232 ] && sed '/\[Service\]/ r systemd/rudder-relayd-hardening' $(DESTDIR)/usr/lib/systemd/system/rudder-relayd.service
 
 	# Install man pages
 	install -m 644 target/man/rudder-relayd.1.gz $(DESTDIR)/opt/rudder/share/man/man1/
