Fixes #15552: Wrong path in shared-files API

--- a/relay/sources/relayd/tools/config/main.conf
+++ b/relay/sources/relayd/tools/config/main.conf
@@ -56,3 +56,5 @@ verify_certificates = true
 command = "/opt/rudder/bin/rudder"
 use_sudo = true
 
+[shared_files]
+path = "/var/rudder/configuration-repository/"
