--- a/relay/sources/relayd/tests/test_simple/config/main.conf
+++ b/relay/sources/relayd/tests/test_simple/config/main.conf
@@ -33,3 +33,6 @@ upstream.verify_certificates = false
 [remote_run]
 command = "tests/fake_agent.sh"
 use_sudo = false
+
+[shared_files]
+path = "tests/"
