--- a/relay/sources/relayd/tests/files/config/main.conf
+++ b/relay/sources/relayd/tests/files/config/main.conf
@@ -40,4 +40,7 @@ command = "tests/fake_agent.sh"
 use_sudo = false
 
 [shared_files]
-path = "tests/"
+path = "tests/shared-files"
+
+[shared_folder]
+path = "tests/shared-folder"
