--- a/relay/sources/relayd/tools/config/main.conf
+++ b/relay/sources/relayd/tools/config/main.conf
@@ -57,4 +57,8 @@ command = "/opt/rudder/bin/rudder"
 use_sudo = true
 
 [shared_files]
-path = "/var/rudder/configuration-repository/"
+path = "/var/rudder/shared-files/"
+
+[shared_folder]
+path = "/var/rudder/configuration-repository/shared-files"
+
