Fixes: #15632: Cleanup and finalization of relay API

--- a/relay/sources/relayd/tests/files/config/main.conf
+++ b/relay/sources/relayd/tests/files/config/main.conf
@@ -19,7 +19,7 @@ limit = 50
 [processing.reporting]
 directory = "target/tmp/runlogs/"
 output = "database"
-skip_logs = false
+skip_event_types = []
 
 [processing.reporting.catchup]
 frequency = 10
@@ -44,3 +44,4 @@ path = "tests/shared-files"
 
 [shared_folder]
 path = "tests/shared-folder"
+
