--- a/relay/sources/relayd/tests/test_simple/config/main.conf
+++ b/relay/sources/relayd/tests/test_simple/config/main.conf
@@ -18,7 +18,7 @@ reporting.directory = "target/tmp/test_simple/"
 reporting.output = "database"
 reporting.catchup.frequency = 10
 reporting.catchup.limit = 50
-reporting.skip_logs = false
+reporting.skip_event_types = []
 #reporting.retention.success = 0
 #reporting.retention.failure = 7d
 
@@ -39,3 +39,4 @@ path = "tests/shared-files"
 
 [shared_folder]
 path = "tests/shared-folder"
+
