--- a/relay/sources/relayd/tools/config/main.conf
+++ b/relay/sources/relayd/tools/config/main.conf
@@ -29,7 +29,8 @@ limit = 50
 directory = "/var/rudder/reports"
 # Can be "database", "upstream" or "disabled"
 output = "database"
-skip_logs = false
+# Can be "log_warn", "log_info", "log_debug"
+skip_event_types = []
 
 [processing.reporting.catchup]
 # In seconds
