Fixes #15488: Virtuozzo Virtual machine reported as \"Unknown type\"

--- a/webapp/sources/rudder/rudder-web/src/main/resources/default.properties
+++ b/webapp/sources/rudder/rudder-web/src/main/resources/default.properties
@@ -46,6 +46,9 @@ vm.type.xen=Xen
 vm.type.aixlpar=AIX LPAR
 vm.type.hyperv=Hyper-V
 vm.type.bsdjail=BSD Jail
+vm.type.virtuozzo=Virtuozzo
+vm.type.openvz=OpenVZ
+vm.type.lxc=LXC
 
 #
 #Rules
