--- a/webapp/sources/rudder/rudder-web/pom.xml
+++ b/webapp/sources/rudder/rudder-web/pom.xml
@@ -152,6 +152,11 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
       <artifactId>paranamer</artifactId>
       <version>2.8</version>
     </dependency>
+    <!-- it seems to not be resolved, don't know why -->
+    <dependency>
+      <groupId>org.scala-lang.modules</groupId>
+      <artifactId>scala-parser-combinators_${scala-binary-version}</artifactId>
+    </dependency>
 
     <dependency>
       <groupId>javax.servlet</groupId>
