Fixes #15752: Merge inventory endpoint and rudder webapps

--- a/webapp/sources/rudder/rudder-web/pom.xml
+++ b/webapp/sources/rudder/rudder-web/pom.xml
@@ -190,6 +190,16 @@ along with Rudder.  If not, see <http://www.gnu.org/licenses/>.
       <artifactId>rudder-rest</artifactId>
       <version>${rudder-version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.normation.inventory</groupId>
+      <artifactId>inventory-provisioning-core</artifactId>
+      <version>${rudder-version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.normation.inventory</groupId>
+      <artifactId>inventory-fusion</artifactId>
+      <version>${rudder-version}</version>
+    </dependency>
 
     <!-- it seems to not be resolved, don't know why -->
     <dependency>
