--- a/relay/sources/relayd/Cargo.toml
+++ b/relay/sources/relayd/Cargo.toml
@@ -36,7 +36,7 @@ tokio-process = "0.2"
 tokio-io = "0.1"
 # Compile dev and release with trace logs enabled
 tracing = { version = "0.1", features = ["max_level_trace", "release_max_level_trace"] }
-tracing-subscriber = { version = "0.1", default-features = false, features = ["filter", "fmt", "tracing-log"] }
+tracing-subscriber = { version = "0.1", default-features = false, features = ["env-filter", "fmt", "tracing-log"] }
 tracing-log = { version = "0.1", default-features = false, features = ["log-tracer"] }
 futures = "0.1"
 hyper = { version = "0.12", default-features = false }
@@ -45,7 +45,7 @@ reqwest = "0.9"
 chrono = { version = "0.4", features = ["serde"] }
 md-5 = "0.8"
 sha2 = "0.8"
-hex = "0.3"
+hex = "0.4"
 bytes = "0.4"
 
 [dev-dependencies]
