Changing pom.pxl to version 6.1.0~alpha1-SNAPSHOT

--- a/webapp/sources/pom.xml
+++ b/webapp/sources/pom.xml
@@ -490,9 +490,7 @@ limitations under the License.
         <groupId>com.softwaremill.quicklens</groupId>
         <artifactId>quicklens_${scala-binary-version}</artifactId>
         <version>${quicklense-version}</version>
-      </dependency
-
-      ><!--
+      </dependency><!--
         lift-web
       -->
       <dependency>
