Fixes #15866: Improve status API

--- a/relay/sources/apache/rudder-apache-relay-common.conf
+++ b/relay/sources/apache/rudder-apache-relay-common.conf
@@ -75,7 +75,7 @@ Alias /reports /var/rudder/reports/incoming
 </Directory>
 
 # Load relay-api
-ProxyPass /rudder/relay-api/ http://127.0.0.1:3030/rudder/relay-api/
+ProxyPass /rudder/relay-api/ http://127.0.0.1:3030/rudder/relay-api/1/
 
 ## Set directory access permissions
 
