Fixes #15880: Cache relayd builds

--- a/relay/sources/Makefile
+++ b/relay/sources/Makefile
@@ -55,9 +55,16 @@ target/man/rudder-relayd.1.gz:
 	gzip -f target/man/rudder-relayd.1
 
 
+CACHER=../../../../../build-caching
+CARGO_SHA:=$(shell sha256sum relayd/Cargo.lock | awk '{print $$1}')
+SRC_SHA:=$(shell (find relayd/src/ -type f && echo relayd/Cargo.toml) | xargs sha256sum | sha256sum | awk '{print $$1}')
 build: man rudder-pkg/rudder_plugins_key.pub autocomplete/rudder-pkg.sh
 	# Build relayd
+	[ -x $(CACHER) ] && $(CACHER) get ../../../../../.cargo/ name=cargo cargo=$(CARGO_SHA)
+	[ -x $(CACHER) ] && $(CACHER) get relayd/target --with-env name=relayd cargo=$(CARGO_SHA) src=$(SRC_SHA)
 	cd relayd && cargo build --release --bin rudder-relayd
+	[ -x $(CACHER) ] && $(CACHER) put ../../../../../.cargo/ name=cargo cargo=$(CARGO_SHA)
+	[ -x $(CACHER) ] && $(CACHER) put relayd/target --with-env name=relayd cargo=$(CARGO_SHA) src=$(SRC_SHA)
 
 ifeq ($(SELINUX),true)
 	# Build SELinux policy package
