Fixes #15920: Only cache dependencies

--- a/relay/sources/Makefile
+++ b/relay/sources/Makefile
@@ -54,17 +54,16 @@ target/man/rudder-relayd.1.gz:
 	$(GET) target/man/rudder-relayd.1 https://docs.rudder.io/man/${RUDDER_MAJOR_VERSION}/rudder-relayd.1 ""
 	gzip -f target/man/rudder-relayd.1
 
-
-CACHER=../../../../../build-caching
+CACHE=cache() { [ -x ../../../../../build-caching ] && ../../../../../build-caching "$$@"; [ -x ../../../../../../build-caching ] && ../../../../../../build-caching "$$@" } ; cache
 build: man rudder-pkg/rudder_plugins_key.pub autocomplete/rudder-pkg.sh
 	# Build relayd 
 	mkdir -p ../../../../../.cargo/ relayd/target/
-	[ -x $(CACHER) ] && $(CACHER) get ../../../../../.cargo/ name=cargo major=$(RUDDER_MAJOR_VERSION) || true
-	[ -x $(CACHER) ] && $(CACHER) get relayd/target/ --with-env name=relayd major=$(RUDDER_MAJOR_VERSION) || true
+	$(CACHE) get ../../../../../.cargo/ name=cargo major=$(RUDDER_MAJOR_VERSION) || true
+	$(CACHE) get relayd/target/ --with-env name=relayd major=$(RUDDER_MAJOR_VERSION) || true
 	cd relayd && cargo build --release --bin rudder-relayd
 	# the cache is always updated and cargo will rebuild only what is needed
-	[ -x $(CACHER) ] && $(CACHER) put ../../../../../.cargo/ name=cargo major=$(RUDDER_MAJOR_VERSION)
-	[ -x $(CACHER) ] && $(CACHER) put relayd/target/ --with-env name=relayd major=$(RUDDER_MAJOR_VERSION)
+	$(CACHE) put ../../../../../.cargo/ name=cargo major=$(RUDDER_MAJOR_VERSION) || true
+	$(CACHE) put relayd/target/ --with-env name=relayd major=$(RUDDER_MAJOR_VERSION) || true
 
 ifeq ($(SELINUX),true)
 	# Build SELinux policy package
