Fixes #16040: Passwords can appear in relayd logs

--- a/relay/sources/relayd/tests/files/config/main.conf
+++ b/relay/sources/relayd/tests/files/config/main.conf
@@ -26,7 +26,8 @@ frequency = 10
 limit = 50
 
 [output.database]
-url = "postgres://rudderreports:PASSWORD@127.0.0.1/rudder"
+url = "postgres://rudderreports@127.0.0.1/rudder"
+password = "PASSWORD"
 max_pool_size = 5
 
 [output.upstream]
