--- a/relay/sources/relayd/tests/test_simple/config/main.conf
+++ b/relay/sources/relayd/tests/test_simple/config/main.conf
@@ -23,7 +23,8 @@ reporting.skip_event_types = []
 #reporting.retention.failure = 7d
 
 [output]
-database.url = "postgres://rudderreports:PASSWORD@127.0.0.1/rudder"
+database.url = "postgres://rudderreports@127.0.0.1/rudder"
+database.password = "PASSWORD"
 database.max_pool_size = 5
 upstream.url = "https://127.0.0.1:8080"
 upstream.user = "rudder"
