--- a/relay/sources/relayd/tools/config/main.conf
+++ b/relay/sources/relayd/tools/config/main.conf
@@ -42,7 +42,8 @@ limit = 50
 
 [output.database]
 # PostgreSQL database on root servers
-url = "postgres://rudder:PASSWORD@127.0.0.1/rudder"
+url = "postgres://rudder@127.0.0.1/rudder"
+password = "PASSWORD"
 # Max pool size for database connections
 max_pool_size = 10
 
