Fixes #16066: Improve relayd tests

--- a/relay/sources/relayd/tests/files/config/main.conf
+++ b/relay/sources/relayd/tests/files/config/main.conf
@@ -1,6 +1,6 @@
 [general]
 nodes_list_file = "tests/files/nodeslist.json"
-nodes_certs_file = "tests/keys/nodescerts.pem"
+nodes_certs_file = "tests/files/keys/nodescerts.pem"
 node_id = "root"
 listen = "127.0.0.1:3030"
 
@@ -17,7 +17,7 @@ frequency = 10
 limit = 50
 
 [processing.reporting]
-directory = "target/tmp/runlogs/"
+directory = "target/tmp/reporting/"
 output = "database"
 skip_event_types = []
 
@@ -37,12 +37,12 @@ password = "password"
 verify_certificates = false
 
 [remote_run]
-command = "tests/fake_agent.sh"
+command = "tests/api_remote_run/fake_agent.sh"
 use_sudo = false
 
 [shared_files]
-path = "tests/shared-files"
+path = "tests/api_shared_files"
 
 [shared_folder]
-path = "tests/shared-folder"
+path = "tests/api_shared_folder"
 
